Create untrusted offline page for content URL with message/rfc822 type

Bug: 831831
Change-Id: If1a36fbec7e73571d7d8c6a921afb3d8fa9b70c3
Reviewed-on: https://chromium-review.googlesource.com/1008635
Reviewed-by: Yafei Duan <romax@chromium.org>
Commit-Queue: Jian Li <jianli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549998}
Former-commit-id: 5fb3a62541301740e3a24e24aac220d93bfccf12