chrome/browser/offline_pages/offline_page_tab_helper_unittest.cc
@@ -239,10 +239,25 @@ TEST_F(OfflinePageTabHelperTest, UntrustedOfflinePageForFileUrl) {
 }
 
 #if defined(OS_ANDROID)
-TEST_F(OfflinePageTabHelperTest, UntrustedOfflinePageForContentUrl) {
+TEST_F(OfflinePageTabHelperTest,
+       UntrustedOfflinePageForContentUrlWithMultipartRelatedType) {
   CreateNavigationSimulator(kTestContentUrl);
   navigation_simulator()->Start();
   navigation_simulator()->SetContentsMimeType("multipart/related");
+  navigation_simulator()->Commit();
+
+  ASSERT_NE(nullptr, tab_helper()->offline_page());
+  EXPECT_EQ(OfflinePageTrustedState::UNTRUSTED, tab_helper()->trusted_state());
+  EXPECT_FALSE(tab_helper()->IsShowingTrustedOfflinePage());
+  EXPECT_EQ(OfflinePageHeader::Reason::NONE,
+            tab_helper()->offline_header().reason);
+}
+
+TEST_F(OfflinePageTabHelperTest,
+       UntrustedOfflinePageForContentUrlWithMessageRfc822Type) {
+  CreateNavigationSimulator(kTestContentUrl);
+  navigation_simulator()->Start();
+  navigation_simulator()->SetContentsMimeType("message/rfc822");
   navigation_simulator()->Commit();
 
   ASSERT_NE(nullptr, tab_helper()->offline_page());
